--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+	<!-- <script type="text/javascript" href="https://apis.google.com/js/api:client.js"></script> -->
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
