--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-signin-client_id" content="1095728091059-hke1g2idu0vh3knb4uuk4872jb18d8vu.apps.googleusercontent.com">
     <title>octo-job-board</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
