--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js"  type="text/javascript" async defer></script>
   </body>
 </html>
