--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="google-signin-client_id" content="1095728091059-hke1g2idu0vh3knb4uuk4872jb18d8vu.apps.googleusercontent.com">
     <title>octo-job-board</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
