--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,11 @@
     <meta name="google-signin-client_id" content="1095728091059-hke1g2idu0vh3knb4uuk4872jb18d8vu.apps.googleusercontent.com">
     <title>octo-job-board</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div id="app"></div>
