fix(JOB-130): Harmonizes Job Board title

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="1095728091059-hke1g2idu0vh3knb4uuk4872jb18d8vu.apps.googleusercontent.com">
-    <title>Jobboard Octo</title>
+    <title>Job Board Octo</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="120x120" href="/static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
