--- a/client/index.html
+++ b/client/index.html
@@ -16,5 +16,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://apis.google.com/js/api:client.js"></script>
+    <script src="/static/registerSW.js"></script>
   </body>
 </html>
