--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
-    <link rel="manifest" href="/static/manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
